Prevent bs-page-breadcrumbs overlapping title and bs-page-tools
[3.0.2]

ERM#13159

--- a/resources/stylesheets/content/content.less
+++ b/resources/stylesheets/content/content.less
@@ -33,11 +33,14 @@
 
 .bs-page-breadcrumbs {
 	line-height: 32px;
+	display: contents;
+
 	a {
 		color: @link-color;
-	}
-	a:hover {
-		text-decoration: none;
+
+		&:hover {
+			text-decoration: none;
+		}
 	}
 }
 
@@ -54,12 +57,14 @@
 .bs-page-breadcrumbs,
 .bs-page-tools {
 	font-size: smaller;
-	display: table-cell;
 	vertical-align: middle;
 	height: 32px;
 	color: @bs-color-neutral3;
 }
+
 .bs-page-tools {
+	display: table-cell;
+
 	a {
 		i::before {
 			color: @bs-color-neutral3;
